[package]
name = "sig-web-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
slint = "1.11.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
slint-build = "1.11.0"
