[package]
name = "sig-web-emulator"
version = "0.1.0"
edition = "2024"
description = "A signature pad emulator for Topaz SigWeb"
readme = "README.md"
repository = "https://github.com/msouchon/sig-web-emulator"
license = "MIT"


[dependencies]
axum = "0.8.4"
parking_lot = "0.12.4"
png = "0.17.16"
slint = "1.11.0"
tiny-skia = "0.11.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
slint-build = "1.11.0"
